# multi-agent-smell-detector

./: .env.example  Dockerfile  README.md  pyproject.toml
code-testes/: teste_1.py  teste_10.py  teste_2.py  teste_5.py  teste_7.py  teste_8.py
code-tests/: teste_3.py  teste_4.py  teste_6.py  teste_9.py
dataset/Code/: my_image.py  unfollow_non_followers.py
dataset/complete_test/: backoff_deco.py  batch_process.py  generate-account-labels.py  main-8.py
dataset/ground_truth/: ground_truth.csv  ground_truth_corrected.csv  implementation_smells_manual.csv
dataset/results/: examples_results.json
dataset/simple_test/: aggregation.py
docs/: ANALISE_ESTATISTICA.md  DETALHAMENTO_TECNICO.md  EXEMPLO_COMPLETO.md  README.md  README_BANDIT_SCRIPT.md  README_PYLINT_SCRIPT.md  RESULTADOS_TCC.md  TESTING_AGENTS.md
examples/: test_dpy_format.py
notebooks/: research_questions_analysis.ipynb  validate_detection_results.ipynb  validate_ground_truth.ipynb
results/: code_tests_agent_security.csv  code_tests_agent_static.csv  code_tests_bandit.csv  code_tests_pylint.csv
results/charts/: comparison_report.json  comparison_report.txt
results/csv/: results_simple_prompt.csv
scripts/: README.md  batch_analyze.py  compare_implementation_smells.py  compare_results.py  convert_results_to_csv.py  generate_academic_figures.py  generate_ground_truth.py  run_complete_analysis.py  run_complete_only.py  run_simple_only.py  run_with_model.py  validate_ground_truth.py
src/: app.py
src/agents/: __init__.py  (+8 more)
tests/: __init__.py  compare_with_dpy.py  llm_judge.py  test_agents.py
(+133 files in other folders)
