[project]
name = "tcc"
version = "0.1.0"
description = "Multi Agents for Code Review"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bandit>=1.8.3",
    "fastapi>=0.115.12",
    "langchain-community>=0.3.22",
    "langchain-google-genai>=2.1.3",
    "langgraph>=0.3.34",
    "langgraph-supervisor>=0.0.23",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "pydantic>=2.11.3",
    "pydantic-ai>=0.1.6",
    "pydantic-settings>=2.9.1",
    "pylint>=3.0.0",
    "seaborn>=0.13.2",
    "streamlit>=1.46.0",
]
