[project]
name = "multi-agent-smell-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "langchain-anthropic>=0.3.21",
    "langchain-core>=0.3.78",
    "langgraph>=0.6.8",
    "langgraph-supervisor>=0.0.29",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "uvicorn>=0.37.0",
]
